--- a/STYLE/landing.css
+++ b/STYLE/landing.css
@@ -2,6 +2,8 @@
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    text-decoration: none !important;
+    list-style: none;
 }
 nav{
     padding: 0 2vw;
