Guilherme-base-Landing 13/08

--- a/STYLE/landing.css
+++ b/STYLE/landing.css
@@ -114,7 +114,11 @@ nav{
     cursor: pointer;
 }
 .carousel-item img{
-    height: 86VH;
+    height:42vw;
     width: 100%;
 }
 /* background-color: #10002b; color: #ff6d00;*/
+
+    /* Parte quem somos */
+
+    
