--- a/STYLE/landing.css
+++ b/STYLE/landing.css
@@ -120,7 +120,38 @@ nav{
 /* background-color: #10002b; color: #ff6d00;*/
 
 
+/* Quem somos */
 
+
+.quemSomos{
+    display: flex;
+    gap: 2vw;
+    width: 100%;
+    padding: 1vw;
+    flex-direction: column;
+    align-items: center;
+}
+
+.quemSomos > div{
+    display: flex;
+    padding: 1vw;
+    justify-content: space-around;
+    width: 50vw;
+ 
+    border: solid #10002b 0.6vh;
+    border-radius: 3vw;
+    align-items: center;
+}
+.quemSomos > div > img{
+    width: 10vw;
+    height: 10vw;
+    border-radius: 10%;
+}
+
+.quemSomos > div > h1{
+    width: 30vw;
+    font-size: 1vw;
+}
 
 .footer{
     display: flex;
