--- a/STYLE/landing.css
+++ b/STYLE/landing.css
@@ -158,6 +158,47 @@ nav{
     font-size: 1vw;
 }
 
+
+/* Serviços */
+.servicos{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: 10vw 0vw;
+    flex-direction: column;
+}
+
+.servicos > div{
+    display: flex;
+    flex-direction: row;
+
+    width: 100%;
+   justify-content: space-around;
+}
+
+
+.servicos > div > div{
+    width: 20vw;
+    display: flex;
+
+    width: 20vw;
+    height: 22vw  ; 
+    justify-content: space-around   ;
+    align-items: center;
+    flex-direction: column;
+}
+
+.servicos > div > div > div{
+    width: 10vw;
+    height: 10vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    border: solid 0.3vw #10002b;
+    border-radius: 2vw;
+}
+
 .footer{
     display: flex;
     justify-content: center;
