--- a/STYLE/cambio.css
+++ b/STYLE/cambio.css
@@ -4,7 +4,11 @@
     padding: 0;
     user-select: none;
 }
-
+.cambio{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
 body::-webkit-scrollbar {
     width: 7px;
   }
@@ -32,3 +36,8 @@ p {
     font-size: 18px;
     margin: 10px 0;
 }
+#chartdiv {
+    display:  flex;
+    width: 100%;
+    height: 500px;
+  }
