--- a/STYLE/cambio.css
+++ b/STYLE/cambio.css
@@ -16,7 +16,6 @@ width: 100%;
 .cambio{
     display: flex;
     width: 100%;
-    background-color: #000;
     align-items: center;
     flex-direction: column;
 }
@@ -38,7 +37,7 @@ body::-webkit-scrollbar-track {
     display: flex;
     width: 100%;
     overflow: hidden; 
-    animation: transacao 10s infinite linear;
+    animation: transacao 20s infinite linear;
     
 }
 h1 {
@@ -48,7 +47,8 @@ h1 {
 }
 
 .container div {
-    color: greenyellow;
+    text-align: center;
+    color: #000;
     flex-direction: column;
     display: flex;
     padding: 1vw;
@@ -59,10 +59,10 @@ h1 {
 
 @keyframes transacao {
     from {
-        transform: translateX(200%); /* Começa fora da tela à direita */
+        transform: translateX(130%); /* Começa fora da tela à direita */
     }
     to {
-        transform: translateX(-200%); /* Termina fora da tela à esquerda */
+        transform: translateX(-130%); /* Termina fora da tela à esquerda */
     }
 }
 
@@ -72,6 +72,6 @@ p {
 }
 #chartdiv {
     display:  flex;
-    width: 50%;
-    height: 20vw;
+    width: 80%;
+    height: 30vw;
   }
