--- a/STYLE/landing.css
+++ b/STYLE/landing.css
@@ -1,249 +1,245 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    outline: none;
-    font-family: 'Inter',sans-serif;
+section.hero-site{
+    height: 98vh;
+    background-image: url(../PICS/imgs/background-home2.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    color: #fff;
+}
+.hero-site .interface{
+    display: flex;
+    align-items: center;
+    height: 100%;
 }
 
-body{
-    background-color: #f1f6fc31;
+.hero-site .txt-hero h1{
+    font-size: 4em;
+    line-height: 70px;
+    font-weight: 200;
 }
 
-section,
-footer{
-    padding: 54px 0;
+.hero-site .txt-hero h1 span{
+    display: block;
+    font-weight: 800;
 }
 
-h3{
-    font-size: 50px;
+.hero-site .txt-hero p{
+    font-size: 20px;
+    font-weight: 300;
+    margin: 20px 0;
 }
 
-p{
-    color: #272626;
+.hero-site .txt-hero p span{
+    display: block;
+}
+
+.hero-site button{
+    width: 220px;
+    height: 60px;
+    font-size: 20px;
+}
+
+/*estilo das vantagens*/
+section.vantagens{
+    padding: 80px 0;
 
 }
-.container{
-    max-width: 1400px;
-    margin: auto;
-    /*padding: 0 5%;*/
+.vantagens .itens-container{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 10%;
+    margin-bottom: 60px;
+
+
 }
-.btn{
-    background-color: #ff6d00 ;
-    color: white;
-    padding: 15px 20px;
-    border-radius: 10px;
-    cursor: pointer;
+
+.vantagens .itens-container .img-itens img{
+    max-width: 480px;
+}
+
+.vantagens .itens-container .txt-itens h3{
+    font-size: 3em;
+    line-height: 50px;
+    margin-bottom: 20px;
+    color: #10002b;
+}
+
+.itens-container .txt-itens h3 span{
+    color: #ff6d00;
+    font-weight: 300;
+}
+
+/*Estilo dos botões de contato*/
+section.contato{
+    background-color: #e3e3e3;
+    padding: 80px 0;
+}
+
+.txt-contato , .icons-contato{
     display: inline-block;
-    transition: 0.1s;
-}
-.btn:hover{
-    background-color:#c25400 ;
-}
-
-.btn.animate-btn{
-    animation: animate-outline 1s ease-out infinite;
+    width: 50%;
+    margin-right: -4px;
+    vertical-align: middle;
 }
 
-@keyframes animate-outline {
-    from{
-        outline: 0px solid #ff6d00  ;
-    }
-    to{
-        outline: 15px solid #10002b09;
-    }
-
+.contato .txt-contato h3{
+    font-size: 2.5em; 
+    line-height: 50px;
+    font-weight: 300;
+    margin-bottom: 20px;
 }
 
-.flex{
+.contato .txt-contato h3 span{
+    color: #10002b;
+    display: block;
+    font-weight: 700;
+
+}
+.contato .icons-contato a{
+    text-decoration: none;
+    
+}
+
+.contato .icons-contato button{
     display: flex;
     align-items: center;
     justify-content: space-between;
 
+    width: 60%;
+    height: 60px;
+    margin:  0 auto 20px auto;
+    padding: 0 60px;
+
+    background-color: transparent;
+    border: 2px solid #10002b;
+    cursor: pointer;
+    transition: 0.4s;
+
 }
 
-header{
-    width: 100%;
-    padding: 60px 4%;
-    position: fixed;
-    top: 0;
-    left: 0;
-    transition: 0.5s;
+.contato .icons-contato button i{
+    font-size: 24px;
+}
 
+.contato .icons-contato button:hover{
+    background-color: #10002b;
+}
+
+.contato .icons-contato button:hover i , .contato .icons-contato button:hover p {
+    color: #ff6d00;
+}
+
+/*Estilo da Sessão hotéis*/
+section.hoteis{
+    height: 600px;
+
+    background-image: url(../PICS//imgs/backgroun-sobre-nos2.jpeg);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    color: #fff;
+    text-align: center;
     
 }
-header.rolagem{
-    background-color: #10002b;
-    padding: 10px 4%;
+.hoteis > .interface{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+    flex-direction: column;
+
 }
 
-nav ul a{
-    color: white;
-    margin: 0 25px;
-    text-transform: uppercase;
-    font-size: 14px;
-    display: inline-block;
-    margin: 0 40px;
+.hoteis h3{
+    font-size: 3em;
+    line-height: 50px;
+    font-weight: 200;
 }
-nav ul a:not(.btn):after{
-    content: "";
-    background-color: #ff6d00;
-    height: 3px;
-    width: 0%;
+
+.hoteis h3 span{
     display: block;
-    margin: 0 auto;
+    font-weight: 600;
+    color: #ff6d00;
+
+}
+.hoteis p{
+    margin: 20px 0;
+    font-size: 20px;
+    font-weight: 300;
+}
+
+.hoteis button{
+    width: 220px;
+    height: 60px;
+}
+
+/*Estilo Como Funciona*/
+
+section.como-funciona{
+    padding: 80px 0;
+    background-color: #e3e3e3;
+}
+
+.txt-funciona, .instrucoes{
+    display: inline-block;
+    width: 50%;
+    margin-right: -4px;
+    vertical-align: top;
+}
+
+.como-funciona .txt-funciona{
+    position: sticky;
+    top: 50%;
+    padding-bottom: 35px;
+}
+
+.como-funciona .txt-funciona h3{
+    font-size: 4em;
+    line-height: 60px;
+    font-weight: 300;
+    color: #ff6d00;
+}
+
+.como-funciona .txt-funciona h3 span{
+    display: block;
+    font-weight: 700;
+    color: #10002b;
+}
+
+.instrucoes .instru-box{
+    display: flex;
+    align-items: center;
+    gap: 20px;
+
+    margin-bottom: 40px;
+    border: 2px solid #10002b;
+    padding: 20px;
+    cursor: pointer;
     transition: 0.3s;
 }
-nav ul a:hover::after{
-    width: 100%;
-}
-/*menu mobile*/
-.flex .menu-icon{
-    cursor: pointer;
-    font-size: 25px;
+
+.instrucoes .instru-box:hover{
+    background-color: #10002b;
     color: #ff6d00;
-    display: none;
-}
-.banner{
-display: flex;
-justify-content: center;
-height: 100vh;
-background-position: center;
-background-size: cover;
-background-attachment: fixed;
-
-}
-.banner .banner-text{
-margin: 300px;
-text-align: center;
-padding: 0 90px;
-}
-.banner .banner-text h1{
-font-size: 96px;
-color: #ffffff;
-}
-.banner .banner-text p{
-font-size: 20px;
-color: #ffffffd8;
-font-weight: lighter;
-margin: 18px 0;
-}
-/*faca mais*/
-.faca-mais .container{
-display: flex;
-align-items: center;
-}
-.faca-mais .faca-mais-txt{
-width: 50%;
-padding: 0 40px;
 }
 
-.faca-mais .faca-mais-txt h3{
-font-size: 56px;
-}
-.faca-mais .faca-mais-txt p{
-margin: 5px 0px 10px 0px;
-font-size: 17px;
-
+.instrucoes .instru-box img{
+    max-width: 100px;
 }
 
-.faca-mais .faca-mais-img{
-width: 50%;
-
-
+.instrucoes .instru-box h4{
+    font-size: 1.5em;
+    font-weight: 800;
+    margin-bottom: 10px;
 }
 
-.faca-mais .faca-mais-img img{
-width: 100%;
-}
-/*depoimentos*/
-
-.depoimentos h3{
-text-align: center
-}
-.depoimentos p{
-margin-bottom: 20px;
-text-align: center;
-}
-.cards{
-display: flex;
-justify-content: center;
-}
-.cards2{
-display: flex;
-justify-content: center;
-}
-.depoimentos .card-item{
-background-color: #f5f5f5;
-margin: 15px;
-border-radius: 14px;
-text-align: center;
-width: 350px;
-transition: 0.3s;
-}
-.depoimentos .card-item img{
-border-radius: 100px;
-width: 180px;
-display: block;
-margin: 10px auto;
-}
-.depoimentos .card-item .nome-user{
-font-weight: 600;
-font-size: 20px;
-margin-bottom: 15px;
-transition: 0.3s;
-}
-.depoimentos .card-item .depoimento-user{
-font-size: 15px;
-padding: 0 15px; 
-transition: 0.3s;   
-}
-.depoimentos .card-item:hover{
-cursor: pointer;
-background-color: #10002b;
-margin-top: -5px;
+.instrucoes .instru-box h4 span{
+    font-weight: 300;
 }
 
-.depoimentos .card-item:hover .nome-user,
-.depoimentos .card-item:hover .depoimento-user{
-color: #ffffff;
-}
-/*campeonatos*/
-.clientes h3,
-.clientes p{
-text-align: center;
-
-}
-.clientes .container div{
-display: flex;
-align-items: center;
-justify-content: space-around;
-}
-/*footer*/
-.footer{
-background-color: #10002b;
-text-align: center;
-}
-.footer i{
-color: #10002b;
-font-size: 19px;
-background-color: white;
-padding: 10px;
-margin: 3px;
-border-radius: 10px;
-
-}
-.footer p {
-margin-top: 10px;
-color: white;
-}
-
-@media screen and(max-width:900px){
-header nav , header .btn-contato{
-display: none;
-}
-
-
+.instrucoes .instru-box p{
+    line-height: 20px;
 }
