--- a/STYLE/landing.css
+++ b/STYLE/landing.css
@@ -11,6 +11,7 @@ section.hero-site{
     display: flex;
     align-items: center;
     height: 100%;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
 }
 
 .hero-site .txt-hero h1{
@@ -212,13 +213,14 @@ section.como-funciona{
 .instrucoes .instru-box{
     display: flex;
     align-items: center;
+    background-color: #fff;
     gap: 20px;
 
     margin-bottom: 40px;
-    border: 2px solid #10002b;
     padding: 20px;
     cursor: pointer;
     transition: 0.3s;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
 .instrucoes .instru-box:hover{
