--- a/STYLE/footer.css
+++ b/STYLE/footer.css
@@ -1,8 +1,11 @@
 footer{
+    margin-top: 5vw;
     background-color: #10002b;
     width: 100%;
     text-align: center;
     padding: 30px 0;
+    bottom: 0;
+    left: 0;
 }
 
 footer .top-footer button{
