--- a/STYLE/action.css
+++ b/STYLE/action.css
@@ -179,7 +179,7 @@ select {
 }
 
 .right{
-    padding: 1vw;
+    padding: 2vw;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -188,4 +188,13 @@ select {
     box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
     height: 100%;
     width: 25%;
+    gap: 2vw;
+}
+
+.right iframe{
+    width: 90%;
+}
+
+.right p{
+    text-align: center;
 }
