--- a/STYLE/cambio.css
+++ b/STYLE/cambio.css
@@ -124,8 +124,8 @@ p {
     background-color: #ffffff;
     border-radius: 10px;
     box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;    padding: 20px;
-    width: 400px;
-    height: 400px;
+    width: 550px;
+    height: 500px;
     text-align: center;
 }
 
@@ -194,4 +194,13 @@ p {
 .orange{
     font-size: 2vw;
     color: #ff6d00;
+}
+
+#data{
+    width: 100%;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    margin-top: 3vw;
+    font-size: .7vw;
 }
