--- a/STYLE/cadastro.css
+++ b/STYLE/cadastro.css
@@ -1,97 +1,125 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+
 body{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+   margin: 0;
+   font-family: "Poppins", sans-serif;
+   
 }
 
-.tudo{
+.main-login{
+    width: 100vw;
+    height: 100vh;
+    background-color: #f7f7f7;
+    display: flex;
+    justify-content: center;    
+    align-items: center;
+    flex-flow: row-reverse;
+}
+
+
+.left-login{
+    width: 50vw;
+    height: 100vh;
     display: flex;
     justify-content: center;
-    width: 80%;
-    height: 37vw;
-    background-color: #10002b;
+    align-items: center;
+    flex-direction: column;
+}
+
+.left-login > h1{
+    font-size: 2vw;
     color: #ff6d00;
-    border-radius: 5% 0 0 5%;
+   
 }
 
-.separar{
+.left-login h1 span{
+    color: #10002b;
+}
+
+.left-cadastro-image{
+     width: 25vw;
+}
+
+.right-login{
+    width: 50vw;
+    height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 85%;
-    height: 85%;
 }
 
-#formAddCliente{
-    display: flex;
-    gap: 1.5vw;
-}
-
-.esquerda{
-    width: 20vw;
-    height: 31vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 3vw;
-}
-
-.direita{
-    width: 20vw;
-    height: 31vw;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    gap: 3vw;
-}
-
-.foto{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 40%;
-    height: 100%;
-
-}
-
-.foto img{
-    width: 100%;
-    height: 100%;
-    border-radius: 3%;
-}
-
-.cadastro{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    height: 100%;
+.card-login{
     width: 60%;
-}
-
-.final{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 3vw;
-    width: 47.5vw;
-    gap: 2vw;
+    flex-direction: column;
+    padding: 30px 35px;
+    background-color: #fff;
+    border-radius: 20px;
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
 }
 
-.finalEsquerda{
-    display: flex;
-    width: 50%;
-    justify-content: center;
-    align-items: center;
-    margin-left: 38%;
+.card-login > h1{
+    color: #e96500;
+    font-weight: 800;
+    margin: 0;
+
 }
 
-.finalDireita{
-    display: flex;
-    width: 50%;
-    gap: 1vw;
-    margin-left: 3%;
+.card-login  h1 span{
+    color: #10002b;
 }
+
+.textfield{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content:center ;
+    margin: 5px;
+}
+
+.textfield > input , select{
+    width: 100%;
+    border: none;
+    border-radius: 10px;
+    padding: 15px;
+    background-color: #f7f7f7;
+    font-size: 12pt;
+    /*box-shadow:  0px 2px 2px #10002b9c ;*/
+    /*border: solid 2px #10002b;*/
+    box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
+    outline: none;
+    box-sizing: border-box;
+    color: #10002b;
+}
+
+.textfield > label{
+    color: #10002b;
+    margin-bottom: 10px;    
+}
+
+.textfield > input::placeholder{
+    color: #10002b;
+}
+
+.btn-cadastrar-se{
+    width: 100%;
+    padding: 16px 0px;
+    margin: 25px;
+    border: none;
+    border-radius: 8px;
+    outline: none;
+    text-transform: uppercase;
+    font-weight: 800;
+    letter-spacing: 3px;
+    color: #10002b;
+    background-color: #ff6d00;
+    cursor: pointer;
+    box-shadow: 0px 10px 40px -12px #ff6f008e;
+}
+
+
