--- a/STYLE/cadastro.css
+++ b/STYLE/cadastro.css
@@ -10,19 +10,20 @@ body{
 }
 
 .main-login{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    padding: 1vw;
 
     display: flex;
     justify-content: center;    
     align-items: center;
     flex-flow: row-reverse;
+    margin-top: 5vw;
+    margin-bottom: 10vw;
 }
 
 
 .left-login{
-    width: 50vw;
-    height: 100vh;
+    width: 45%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -44,15 +45,14 @@ body{
 }
 
 .right-login{
-    width: 50vw;
-    height: 100vh;
+    width: 55%;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .card-login{
-    width: 80%;
+    width: 60%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -108,7 +108,7 @@ body{
 }
 
 .btn-cadastrar-se{
-    width: 100%;
+    width: 30%;
     padding: 16px 0px;
     margin: 25px;
     border: none;
@@ -126,12 +126,6 @@ body{
 .forgot a{
     cursor: pointer;
     color: #e96500;
-}
-
-.primeiro{
-}
-
-.segundo{
 }
 
 .center{
