--- a/STYLE/cadastro.css
+++ b/STYLE/cadastro.css
@@ -9,6 +9,14 @@ body{
    background-color: #f7f7f7;
 }
 
+header {
+    padding: 10px;
+    /*display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 1vw;*/
+}
+
 .main-login{
     width: 100%;
     padding: 1vw;
@@ -18,7 +26,7 @@ body{
     align-items: center;
     flex-flow: row-reverse;
     margin-top: 5vw;
-    margin-bottom: 10vw;
+    
 }
 
 
