--- a/STYLE/acaoDivida.css
+++ b/STYLE/acaoDivida.css
@@ -30,8 +30,29 @@ form{
     padding: 2vw 5vw;
 }
 
+#lasaldo{
+    font-size: 1.5vw;
+}
+
+#saldo{
+padding: .5vw .5vw .5vw 1vw;
+}
+
 .divida-item{
     width: 55%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: left;
+    padding: 2vw;
+    gap: 1vw;
+    background-color: #FFF;
+    border-radius: 1.5vw;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+}
+
+.divida-item-2{
+    width: 40%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -93,6 +114,21 @@ span{
 }
 
 .divida-item input:focus{
+    box-shadow: 5.5px 7px 0 black;
+}
+
+.divida-item-2 input{
+    width: 96%;
+    padding: .5vw;
+    font-size: 1rem;
+    border: 1.5px solid #000;
+    border-radius: 0.5rem;
+    box-shadow: 2.5px 3px 0 #000;
+    outline: none;
+    transition: ease 0.25s;
+}
+
+.divida-item-2 input:focus{
     box-shadow: 5.5px 7px 0 black;
 }
 
