--- a/STYLE/acaoDivida.css
+++ b/STYLE/acaoDivida.css
@@ -20,6 +20,32 @@ form{
     width: 100%;
 }
 
+.green{
+    background-color: green;
+    width: 100%;
+    height: 2vw;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    align-items: center;
+    margin-top: -.2vw !important;
+}
+
+.red{
+    background-color: #c50000;
+    width: 100%;
+    height: 2vw;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    align-items: center;
+    margin-top: -.2vw !important;
+}
+
 #dividas-container{
     display: flex;
     justify-content: center;
