--- a/STYLE/acaoDivida.css
+++ b/STYLE/acaoDivida.css
@@ -39,6 +39,33 @@ form{
     background-color: rgb(255, 65, 65);
   }
   
+  .green{
+    background-color: green;
+    width: 100%;
+    height: 2vw;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    align-items: center;
+    margin-top: -.2vw !important;
+}
+
+.red{
+    background-color: #c50000;
+    width: 100%;
+    height: 2vw;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    align-items: center;
+    margin-top: -.2vw !important;
+}
+
+
   /* plus sign */
   .sign {
     width: 100%;
