--- a/STYLE/edit.css
+++ b/STYLE/edit.css
@@ -14,6 +14,30 @@ body{
     gap: 3vw;
 }
 
+.confirmar{
+    display: flex;
+    position: absolute;
+    width: 10vw;
+    height: 10vw;
+    background-color: aqua;
+}
+
+.baixo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50%;
+    width: 100%;
+}
+
+.cima{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50%;
+    width: 100%;
+}
+
 .conteudo{
     display: flex;
     width: 50vw;
