--- a/STYLE/perfil.css
+++ b/STYLE/perfil.css
@@ -4,8 +4,7 @@
     box-sizing: border-box;
 }
 body{
-  
-    background-color: aqua;
+    background-color: #e9ecef !important;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -13,54 +12,120 @@ body{
 }
 
 .main-Perfil{
+    margin-top: 1.5vw;
     display: flex;
-    background-color: blue;
     height: 80vh;
-    align-items: center;
-    justify-content: space-around;
-    width: 70vw;
-}
-.divImg >img{
-    height: 50vh;
-    width: 40vh;
-}
-.divImg { 
-    display: flex;
-    align-items: center;
     flex-direction: column;
-    height: 60%;
-    width: 40%;
+    align-items: center;
+    justify-content: center;
+    width: 63vw;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
 }
-.divImg > button{
-     width: inherit;
-     cursor: pointer;
-     height: 4vh;
-}
-.divInfo{
+
+.titulo{
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 40%;
-    height: 80%;
-    flex-direction: column;
+    height: 10%;
+    width: 100%;
+    color: #10002b;
+    font-size: 1vw;
 }
-.divInfo li{
-    color: white;
-    justify-content: space-around;
-    list-style: none;
-    font-size: 5vh;
-    text-decoration: none;
+
+.titulo a{
+    color: #ff6d00;
+}
+
+.conteudo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 90%;
+    width: 100%;
+}
+
+.esquerda{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 40%;
+}
+
+.fotoUsuario{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 60%;
+}
+
+.miniaturaPerf{
+    height: 15vw;
+    border-radius: 50%;
+}
+
+.plano{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    gap: 1vw;
+    font-size: 1vw;
+    height: 40%;
+    width: 100%;
+}
+
+.texto{
+    font-size: 1vw;
+}
+
+.direita{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 90%;
+    width: 60%;
+    gap: 1vw;
+}
+
+.nomes{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    width: 60%;
+    height: 15%;
+    color: #ff6d00;
+    font-size: 1.2vw;
+}
+
+.phps{
+    display: flex;
+    color: black;
+    font-size: 1vw;
+    background-color: #dee2e6;
 }
 
 .editar{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 5vw;
-    width: 5vw;
+    width: 100%;
+    height: 10%;
 }
 
-.btnedit{
-    color: white;
-    font-size: 2vw;
+.btnEdit a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 2vw;
+    width: 5vw;
+    font-size: 1vw;
+    border-radius: 2vw;
+    text-decoration: none;
+    color: #10002b;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
 }
