--- a/STYLE/perfil.css
+++ b/STYLE/perfil.css
@@ -106,7 +106,9 @@ body{
     display: flex;
     color: black;
     font-size: 1vw;
+    border-radius: 0.5vw;
     background-color: #dee2e6;
+    padding: 1%;
 }
 
 .editar{
