--- a/STYLE/perfil.css
+++ b/STYLE/perfil.css
@@ -19,6 +19,7 @@ body{
     align-items: center;
     justify-content: center;
     width: 63vw;
+    border-radius: .5%;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
 }
 
