--- a/STYLE/edit.css
+++ b/STYLE/edit.css
@@ -40,42 +40,121 @@ body{
 
 .conteudo{
     display: flex;
-    width: 50vw;
+    flex-direction: column;
+    width: 70vw;
     height: 35vw;
-    background-color: aqua;
+    margin-top: 1vw;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+}
+
+.cimaConteudo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.2vw;
+    width: 100%;
+    color: #10002b;
+    height: 13%;
+}
+
+.cimaConteudo a{
+    color: #ff6d00;
+}
+
+.baixoConteudo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 87%;
 }
 
 .esquerda{
     display: flex;
-    flex-direction: column;
-    width: 40%;
+    justify-content: center;
+    align-items: center;
     height: 100%;
-    background-color: antiquewhite;
+    width: 32%;
 }
 
 .direita{
+    justify-content: center;
+    align-items: center;
     display: flex;
     flex-direction: column;
+    width: 68%;
     height: 100%;
-    width: 60%;
-    align-items: center;
-    justify-content: center;
-    gap: 1vw;
 }
 
 .infos{
     display: flex;
-    justify-content: center;
     align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 85%;
+    gap: 1.5vw;
     flex-direction: column;
-    width: 95%;
-    height: 90%;
-    background-color: azure;
 }
 
-.salvar{
+.info{
     display: flex;
-    gap: 12vw;
     justify-content: center;
     align-items: center;
+    width: 80%;
+    height: 20%;
+    gap: 1vw;
+}
+
+.conteudoInfo{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 100%;
+    width: 50%;
+}
+
+.conteudoInfo label{
+    font-size: 1.2vw;
+    color: #ff6d00;
+    display: flex;
+}
+
+.conteudoInfo input{
+    display: flex;
+    width: 100%;
+    padding: 1%;
+    border: none;
+    border-bottom: solid .2vw #10002b;
+    font-size: 1vw;
+}
+
+.botoes{
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    width: 100%;
+    gap: 15vw;
+    height: 15%;
+}
+
+.botoes button{
+    cursor: pointer;
+}
+
+.btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1%;
+    border: none;
+    border-radius: 2vw;
+    text-decoration: none;
+    color: #10002b;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+    font-size: .9vw;
+    width: 7vw;
+}
+
+#deleteButton{
+    color: red;
 }
