--- a/STYLE/edit.css
+++ b/STYLE/edit.css
@@ -45,6 +45,7 @@ body{
     height: 35vw;
     margin-top: 1vw;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+    border-radius: 1%;
 }
 
 .cimaConteudo{
@@ -73,8 +74,39 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     height: 100%;
     width: 32%;
+}
+
+.foto{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    flex-direction: column;
+    gap: 1vw;
+    height: 65%;
+}
+
+.foto img{
+    height: 70%;
+    border-radius: 50%;
+}
+
+.plano{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    font-size: 1.5vw;
+    height: 35%;
+}
+
+.textoPlano{
+    font-size: .8vw;
 }
 
 .direita{
@@ -128,16 +160,16 @@ body{
     font-size: 1vw;
 }
 
-.botoes{
-    align-items: center;
-    justify-content: center;
+.conteudoInfoBtn{
     display: flex;
-    width: 100%;
-    gap: 15vw;
-    height: 15%;
+    gap: 3vw;
+    margin-top: 2vw;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
 }
 
-.botoes button{
+.conteudoInfoBtn button{
     cursor: pointer;
 }
 
@@ -145,6 +177,7 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100%;
     padding: 1%;
     border: none;
     border-radius: 2vw;
