--- a/STYLE/dashboard.css
+++ b/STYLE/dashboard.css
@@ -130,7 +130,24 @@ body {
     align-items: center;
     width: 100%;
     height: 25vw;
+}
 
+.espacoBtnEsquerda, .espacoBtnDireita{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+    width: 10%;
+}
+
+.btnEsquerda, .btnDireita{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: #10002b solid 2px;
+    width: 30%;
+    height: 12%;
+    border-radius: 50%;
 }
 
 .containerDividas{
@@ -195,6 +212,17 @@ body {
 .botaoDivida{
     width: 10vw;
     height: 60%;
+    font-size: 1vw;
+    color: #ff6d00;
+    border: none;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+    border-radius: 2vw;
+}
+
+.btnDividaPaga{
+    width: 10vw;
+    height: 1.8vw;
+    background-color: #10002b;
     font-size: 1vw;
     color: #ff6d00;
     border: none;
