--- a/STYLE/edit.css
+++ b/STYLE/edit.css
@@ -7,6 +7,7 @@
 body{
     display: flex;
     justify-content: center;
+    background-color: #fff;
     align-items: center;
     flex-direction: column;
     overflow-x: hidden;
