--- a/STYLE/dashboard.css
+++ b/STYLE/dashboard.css
@@ -148,6 +148,7 @@ body {
     width: 30%;
     height: 12%;
     border-radius: 50%;
+    cursor: pointer;
 }
 
 .containerDividas{
@@ -157,6 +158,13 @@ body {
     width: 80%;
     gap: 2vw;
     height: 100%;
+    overflow-x: auto;
+    overflow-y: hidden;
+    scroll-behavior: smooth;
+}   
+
+.containerDividas::-webkit-scrollbar{
+    display: none;
 }
 
 .cardDivida {
