--- a/STYLE/dashboard.css
+++ b/STYLE/dashboard.css
@@ -153,14 +153,15 @@ body {
 
 .containerDividas{
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
-    width: 80%;
+    width: 80vw;
     gap: 2vw;
     height: 100%;
     overflow-x: auto;
     overflow-y: hidden;
     scroll-behavior: smooth;
+    background-color: #10002b;
 }   
 
 .containerDividas::-webkit-scrollbar{
@@ -176,7 +177,7 @@ body {
     align-items: center;
     flex-direction: column;
     height: 15vw;
-    width: 18vw;
+    width: 30vw !important;
 }
 
 .nomeDivida{
