--- a/STYLE/dashboard.css
+++ b/STYLE/dashboard.css
@@ -151,21 +151,15 @@ body {
     cursor: pointer;
 }
 
-.containerDividas{
+.containerDividas {
     display: flex;
-    justify-content: left;
+    justify-content: flex-start;
     align-items: center;
     width: 80vw;
-    gap: 2vw;
+    gap: 4vw;
     height: 100%;
     overflow-x: auto;
-    overflow-y: hidden;
     scroll-behavior: smooth;
-    background-color: #10002b;
-}   
-
-.containerDividas::-webkit-scrollbar{
-    display: none;
 }
 
 .cardDivida {
@@ -177,7 +171,12 @@ body {
     align-items: center;
     flex-direction: column;
     height: 15vw;
-    width: 30vw !important;
+    flex: 0 0 15vw; /* A largura agora depende do espaço disponível no contêiner */
+    margin-left: 1vw;
+}
+
+.containerDividas::-webkit-scrollbar{
+    display: none;
 }
 
 .nomeDivida{
@@ -226,6 +225,7 @@ body {
     border: none;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
     border-radius: 2vw;
+    cursor: pointer;
 }
 
 .btnDividaPaga{
