--- a/STYLE/edit.css
+++ b/STYLE/edit.css
@@ -26,9 +26,43 @@ body{
 .confirmar{
     display: flex;
     position: absolute;
-    width: 10vw;
-    height: 10vw;
-    background-color: aqua;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 15vw;
+    height: 15vw;
+    border-radius: 1vw;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+    background-color: #fff;
+}
+
+.cima{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 50%;
+    width: 100%;
+}
+
+.textoCima{
+    margin-top: 3vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    height: 90%;
+    width: 90%;
+    gap: 1vw;
+    text-align: center;
+    font-size: 1vw;
+}
+
+.textoCima a{
+    color: #ff6d00;
+}
+
+.textoCima b{
+    color: red;
 }
 
 .baixo{
@@ -39,12 +73,24 @@ body{
     width: 100%;
 }
 
-.cima{
+.botoesBaixo{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 50%;
+    height: 100%;
     width: 100%;
+    gap: 3vw;
+}
+
+.btnSimBaixo, .btnNaoBaixo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 2vw;
+    width: 4vw;
+    border: none;
+    border-radius: 2vw;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
 }
 
 .conteudo{
