--- a/STYLE/header.css
+++ b/STYLE/header.css
@@ -39,7 +39,7 @@ header .btn-contato button:hover, .hero-site button:hover, .hoteis button:hover{
 
 .user-photo {
     height: 4vw !important;
-    width: 4vw;
+    width: 4vw !important;
     border-radius: 50%;
     cursor: pointer;
     transition: transform 0.3s ease;
