--- a/STYLE/edit.css
+++ b/STYLE/edit.css
@@ -255,17 +255,21 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 2.3vw;
     padding: 1%;
     border: none;
     border-radius: 2vw;
     text-decoration: none;
     color: #10002b;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
-    font-size: .9vw;
+    font-size: 1vw;
     width: 7vw;
 }
 
 #deleteButton{
     color: red;
+}
+
+#ultInfo{
+    margin-bottom: 4vw;
 }
