--- a/STYLE/perfil.css
+++ b/STYLE/perfil.css
@@ -125,11 +125,26 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 2vw;
-    width: 5vw;
+    height: 2.3vw;
+    width: 6vw;
     font-size: 1vw;
     border-radius: 2vw;
     text-decoration: none;
     color: #10002b;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+}
+
+.btnAnalise{
+    display: flex;
+    width: auto;
+    height: auto;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    font-size: 1vw;
+    background-color: #fff;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.199);
+    margin-bottom: 1.5vw;
+    text-decoration: none;
+    border-radius: 2vw;
 }
