--- a/STYLE/sobreNos.css
+++ b/STYLE/sobreNos.css
@@ -103,8 +103,26 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     height: 33vw;
     width: 100%;
+}
+
+.textoGrafico{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+
+}
+.textoGrafico  div{
+    height: 70%;
+    background-color: #ff6d00;
+    width: 2vw;
+    margin-right: 1vh;
+}
+.textoGrafico h1{
+    font-weight: 300;
 }
 
 .espacoOQ{
